# libghibli

./: .gitignore  Makefile.am  config.h.in  configure  configure.ac  expr.sh  gmc.list  makefile.in
benchmarking/ancygibi/: ancygibi_result.ods  rpi.mem.grep  rpi.timing.csv
oldref/: ancygibi.c  gibi.h  schnorr.h  schnorrtest.c  tscibi.c
simres/: .~lock.ancygibi_result.csv#  ancygibi_result.csv
src/: Makefile.am  core.c  core.h  ghibc.c  ghibc_cli.c  ghibc_master.c  ghibc_pam.c  ghibli.c  ghibli.h  impl.c  impl.h  makefile.am  makefile.in
src/impl/: __crypto.h  ancygibi.c  chin15.c  chin15.h  crypto.c  ds.c  ds.h  gibi.h  heng.c  heng04.c  ibi.c  ibi.h  schibi.c  schnorr.c  schnorr.h  schnorr91.c  schnorr91.h  sodium_macro.h  tscibi.c  vangujar19.c
src/tests/: ancygibitest.c  coretest.c  dstest.c  example.c  ibitest.c  schibitest.c  schnorrtest.c  twinschtest.c
src/utils/: futil.c
testing/: cjason.key  nluser.key  pam_tester  run  sk  sk.pub  sudo
